[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/error.png" type="Texture" id=1]
[ext_resource path="res://entities/Command/Command.gd" type="Script" id=2]
[ext_resource path="res://assets/shock.png" type="Texture" id=3]
[ext_resource path="res://assets/shockwawe.png" type="Texture" id=4]
[ext_resource path="res://assets/daze.png" type="Texture" id=5]
[ext_resource path="res://assets/fix.png" type="Texture" id=6]
[ext_resource path="res://assets/Kenney Pixel Square.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/sinewave.png" type="Texture" id=8]
[ext_resource path="res://assets/cosewave.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 14 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 8
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -4
font_data = ExtResource( 7 )

[node name="Command" type="Area2D"]
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = -40.0
margin_top = -60.0
margin_right = 60.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 2.0
custom_fonts/font = SubResource( 3 )
text = "Shock
Damage : 1
Cost: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_Command_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Command_mouse_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
